--- a/src/app/styles/projects.css
+++ b/src/app/styles/projects.css
@@ -32,3 +32,10 @@
 .card:hover {
   border-color: var(--my-orange);
 }
+
+/* clearfix */
+.grid:after {
+  content: ' ';
+  display: block;
+  clear: both;
+}
